Remove the Poseidon-commitment stand-in gate; real derivation gate only
The Poseidon(secret, addr)==commitment gate existed because the 19M
derivation circuit wasn't practically provable pre-ADR-0029. It now is
(proven + verified on-chain, ~0.95 ADA), so the stand-in is superseded:

- removed RecoveryCommitmentProof, RecoveryCircuitService, PoseidonCompute,
  RecoveryProofValidator, OnChainRecoveryService, and the commitment E2E
  (AccountOwnershipRecoveryYaciE2ETest); the ownership witness sanity check
  survives as OwnershipProofWitnessTest (runs green, 8.8s).
- README rewritten around the single real gate with the end-to-end flow
  (one-time: compile -> setup -> persist PK/embed VK; per proof: lock datum=
  pkh -> witness -> prove ~2min -> on-chain verify ~0.95 ADA) + run
  instructions + production caveats (MPC ceremony, ScriptContext binding).
- DESIGN.md: status note — implemented; §14 commitment variant kept as
  design history only.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>